tests/bad/no_return_if.ae
/// fail: Function does not always return

def foo(): i32 {
	if true {
		return 5
	} else {
		print("nope")
	}
}